// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GiftWrappingDisplay component should renders correctly props are present 1`] = `
<div
  className=""
  dataLocator="review-shipping-section"
>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(TitlePlusEditButton)
        dataLocator="pickup-section"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 5,
          "medium": 4,
          "small": 6,
        }
      }
    >
      <div
        className="shippingAddressTitle"
      >
        <Styled(BodyCopy)
          className={null}
          color="gray.900"
          component="p"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        />
      </div>
      <Styled(Address)
        className="addressStyle"
      />
      <Styled(BodyCopy)
        className={null}
        color="gray.900"
        component="p"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      />
      <Styled(BodyCopy)
        className={null}
        color="gray.900"
        component="p"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 5,
          "medium": 4,
          "small": 6,
        }
      }
    />
  </Styled(Row)>
</div>
`;

exports[`GiftWrappingDisplay component should renders correctly props not present 1`] = `
<div
  dataLocator="review-shipping-section"
>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(TitlePlusEditButton)
        dataLocator="pickup-section"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 5,
          "medium": 4,
          "small": 6,
        }
      }
    >
      <div
        className="shippingAddressTitle"
      >
        <Styled(BodyCopy)
          className={null}
          color="gray.900"
          component="p"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        />
      </div>
      <Styled(Address)
        className="addressStyle"
      />
      <Styled(BodyCopy)
        className={null}
        color="gray.900"
        component="p"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      />
      <Styled(BodyCopy)
        className={null}
        color="gray.900"
        component="p"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 5,
          "medium": 4,
          "small": 6,
        }
      }
    />
  </Styled(Row)>
</div>
`;
